--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div id="alert-placeholder-id"></div>
     <div class="row">
-      <div class="col-sm-10">
+      <div class="col-sm-10 col-xs-12">
         <h1 class="elegant">{{ thisnodes[0].title }}</h1>
         {% if thisnodes[0].undertagline %}
         <h2>{{ thisnodes[0].undertagline }}</h2>
@@ -29,16 +29,26 @@
 
         <div style="font-size: 12px; color: #999;">Post, tweet, share:</div>
         <div>
-          <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook">
-            <i class="fa fa-border fa-facebook-f"></i>
+          <a href="https://reddit.com/submit/?text={{ 'Write a few sentences...' | escape }}&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title | escape }}"  target="_blank" aria-label="Share on Reddit"
+             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Reddit"
+          >
+            <i class="fa-lg fa fa-border fa-reddit"></i>
           </a>
-          <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter">
-            <i class="fa fa-border fa-twitter"></i>
+          <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter"
+             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Tweet"
+          >
+            <i class="fa-lg fa fa-border fa-twitter"></i>
           </a>
-          <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin">
-            <i class="fa fa-border fa-linkedin"></i>
+          <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook"
+             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Facebook"
+          >
+            <i class="fa-lg fa fa-border fa-facebook-f"></i>
           </a>
-        </div>
+          <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin"
+             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Linkedin"
+          >
+            <i class="fa-lg fa fa-border fa-linkedin"></i>
+          </a>        </div>
       </div><!--col-->
     </div><!--row-->
 
