--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -10,10 +10,10 @@
                   action="https://landing.mailerlite.com/webforms/landing/r2q9o2">
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-xs-4">
-                            <img src="https://via.placeholder.com/155x150">
+                        <div class="hidden-xs col-sm-4 ">
+                            <div class="side_image_weekly_0 center-block"></div>
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-xs-12 col-sm-8">
                             <p>
                                 <span class="fa fa-check" style="color: #428bca;"></span> Every Saturday there will be an email with the list of <em>{{ thisnodes[0].title }}</em> that appeared on remote4me.com last <strong>week</strong>.
                             </p>
