+email subscribe bugfixes
Former-commit-id: 8d584ae44e3e942c0ff514f940f40be1ab8fd2a2

--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -17,10 +17,10 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-right">
             <li>
-              <a href="javascript:void(0)" data-toggle="modal" data-target=".subscribe-weekly-modal">Weekly</a>
+              <a href="#subscribe-weekly-modal-id" data-toggle="modal" data-target=".subscribe-weekly-modal">Weekly</a>
             </li>
             <li>
-              <a href="javascript:void(0)" data-toggle="modal" data-target=".subscribe-daily-modal">Daily</a>
+              <a href="#subscribe-daily-modal-id" data-toggle="modal" data-target=".subscribe-daily-modal">Daily</a>
             </li>
           </ul>
         </div>
