--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -76,24 +76,29 @@
                     <br/>
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-3 xs-no-padding-left hidden-xs">
-                            <div class="side_image_daily_1 center-block"></div>
+                        <div class="email-daily-subh col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
+                            <b>Please help ME help YOU:</b>
                         </div>
                         <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
-                            <b>Please help ME help YOU:</b> The remote4me.com site is a one-man show. I am working on adding new job boards, as well as
+                            The remote4me.com site is a one-man show. I am working on adding new job boards, as well as
                             <a href="#" class="text-nowrap" data-container="#form-subscribe-daily-modal-id" data-placement="top" data-trigger="click hover focus" data-toggle="popover" data-html="true" data-content='Classifiers are putting jobs in the proper category. 4 classifiers are implemented at the moment:<br/> - remoteness classifier<br/> - profession classifier<br/> - tech stack classifier<br/> - time zone classifier<br/>' >improving the classifiers</a>.
                             I'm adding new features to this site. I'm also doing marketing. It eats a lot of time! So if YOU help me with marketing, then I have more time to work on
                             <a href="#" class="text-nowrap" data-container="#form-subscribe-daily-modal-id" data-placement="top" data-trigger="click hover focus" data-toggle="popover" data-html="true" data-content='New features in the pipeline:<br/> - new "work authorization" classifier<br/> - salary statistics<br/>'>new features</a>.
                             This is how you can help me:<br/><br/>
+                        </div>
+                    </div>
 
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right sm-no-padding-left sm-no-padding-right">
+                            <div class="side_image_daily_1"></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right sm-no-padding-right">
                             <div class="row">
-                                <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
-                                    <div class="side_image_daily_1"></div>
+                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc sm-no-padding-left" >
+                                    <span class="badge-left" >1</span>
                                 </div>
-                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc" >
-                                    <span class="badge-left no-padding-left" >1</span>
-                                </div>
-                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right" >
+
+                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right sm-no-padding-right" >
                                     Post a link to remote4me and say something about it on a prominent page on your site or blog or an online forum. Alternatively, post on your favorite social network:
                                     &nbsp;&#32;
                                     <a href="https://reddit.com/submit/?text={{ 'Write a few sentences...' | escape }}&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title | escape }}"  target="_blank" aria-label="Share on Reddit"
@@ -126,25 +131,25 @@
                                     <a href="#" ><i class="fa fa-border fa-flipboard-brands" target="_blank" aria-label=""></i></a>
                                     <a href="#"><i class="fa fa-border fa-medium-m-brands" target="_blank" aria-label=""></i></a>
                                     -->
-
                                     <br/>
                                     <br/>
-                                </div>
+                                </div> <!-- class="col-xs-11  -->
                             </div> <!-- div class="row" -->
-                        </div> <!-- col-sm-9  -->
-                    </div><!-- div class="row" -->
+                        </div>  <!-- class="col-sm-9  -->
+                    </div> <!--  -->
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
+                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right sm-no-padding-left sm-no-padding-right">
                             <div class="side_image_daily_2"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
+                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right sm-no-padding-right">
                             <div class="row">
-                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc" >
+                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc sm-no-padding-left" >
                                     <span class="badge-left" >2</span>
                                 </div>
-                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right">
+                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right sm-no-padding-right">
                                     Copy the link to your page/post (it is better to use a computer for copying).<br/>
+                                    <br/>
                                     <br/>
                                 </div>
                             </div>
@@ -152,15 +157,15 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
+                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right sm-no-padding-left sm-no-padding-right">
                             <div class="side_image_daily_3"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
+                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right sm-no-padding-right">
                             <div class="row">
-                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc" >
+                                <div class="col-xs-1 xs-no-padding-left sm-width-2perc sm-no-padding-left" >
                                     <span class="badge-left" >3</span>
                                 </div>
-                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right">
+                                <div class="col-xs-11 xs-no-padding-left xs-no-padding-right sm-no-padding-right">
                                     Paste the link to your page/post in the field below. One link is enough. After this, you'll get email updates for as long as you wish.
                                     <br/>
                                 </div>
@@ -172,6 +177,7 @@
                         <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
                         </div>
                         <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
+                            <br/>
                             <div class="form-group">
                                 <label class="col-xs-4 control-label-sm" for="inputUrl4" >Page/post URL:</label>
                                 <div class="col-xs-8 xs-no-padding-left">
@@ -181,7 +187,6 @@
                             <input type="hidden" name="groups[]" value="{{ thisnodes[0].mailGroupDay }}" checked="checked">
                             <input type="hidden" name="ml-submit" value="1">
                             <input type="hidden" name="ajax" value="1">
-                            Thank you for helping make remote4me even more useful!
                         </div>
                     </div>
 
@@ -192,7 +197,6 @@
                 </div>
 
             </form><!-- id="form-subscribe-daily-modal-id" -->
-
         </div>
     </div>
 </div>
