--- a/_includes/themes/restart/page-jobad-modal-email-subscribe.html
+++ b/_includes/themes/restart/page-jobad-modal-email-subscribe.html
@@ -55,24 +55,25 @@
 
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
+                        <div class="hidden-xs hidden-sm hidden-md col-lg-3 xs-no-padding-left xs-no-padding-right">
                             <div class="side_image_daily_0 center-block"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
+                        <div class="col-xs-12 col-lg-9 xs-no-padding-left xs-no-padding-right">
                             <p>
                                 <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) you will get an email with the list of <em>{{ thisnodes[0].title }}</em> that appeared on remote4me.com during the <strong>day</strong>.<br/>
                                 <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.<br/>
                                 <span class="fa fa-check" style="color: #428bca;"></span> This email list sends you new job ads. Not for marketing/promotional purposes.<br/>
                             </p>
-                            <div class="form-group">
-                                <label class="col-xs-4 control-label-sm" for="day-input-email-id" >Email:</label>
-                                <div class="col-xs-8 xs-no-padding-left">
-                                    <input type="email" required class="form-control" id="day-input-email-id" name="fields[email]" placeholder="you@youremail.com">
-                                </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group">
+                            <label class="col-xs-3 control-label-sm" for="day-input-email-id" >Email:</label>
+                            <div class="col-xs-7 xs-no-padding-left">
+                                <input type="email" required class="form-control" id="day-input-email-id" name="fields[email]" placeholder="you@youremail.com">
                             </div>
                         </div>
-
-                    </div><!--row -->
+                    </div>
                     <br/>
 
                     <div class="row">
@@ -174,20 +175,16 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-3 xs-no-padding-left xs-no-padding-right">
-                        </div>
-                        <div class="col-xs-12 col-sm-9 xs-no-padding-left xs-no-padding-right">
-                            <br/>
-                            <div class="form-group">
-                                <label class="col-xs-4 control-label-sm" for="inputUrl4" >Page/post URL:</label>
-                                <div class="col-xs-8 xs-no-padding-left">
-                                    <input id="inputUrl4" type="url" required class="form-control" name="fields[url_promo]" placeholder="https://url-of-the-post" pattern="https?://.+" size="15">
-                                </div>
+                        <br/>
+                        <div class="form-group">
+                            <label class="col-xs-3 control-label-sm" for="inputUrl4" >Page/post URL:</label>
+                            <div class="col-xs-7 xs-no-padding-left">
+                                <input id="inputUrl4" type="url" required class="form-control" name="fields[url_promo]" placeholder="https://url-of-the-post" pattern="https?://.+" size="15">
                             </div>
-                            <input type="hidden" name="groups[]" value="{{ thisnodes[0].mailGroupDay }}" checked="checked">
-                            <input type="hidden" name="ml-submit" value="1">
-                            <input type="hidden" name="ajax" value="1">
                         </div>
+                        <input type="hidden" name="groups[]" value="{{ thisnodes[0].mailGroupDay }}" checked="checked">
+                        <input type="hidden" name="ml-submit" value="1">
+                        <input type="hidden" name="ajax" value="1">
                     </div>
 
                 </div> <!-- class="modal-body" -->
